--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,31 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_header %}
+    <div class='container header-container'>
+        <div class="row">
+            <div class="col">
+                
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block content %}
-    <h1 class="display-4 text-success">IT WORKS!</h1>
+    <div class='container h-100'>
+        <div class='row h-100'>
+            <div class='col-7 col-md-6 my-auto'>
+                <h1 class='display-4 logo-font text-black'>
+                    Treat yourself in 2022
+                </h1>
+                <div class='my-5'>
+                    <h4>
+                        <a href='' class="shop-now-button btn btn-lg rounder-0 text-uppercase py-3">
+                            SHOP NOW!
+                        </a>
+                    </h4>
+                </div>
+            </div>
+        </div>
+    </div>>
 {% endblock %}
