added main page header

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
     <div class='container header-container'>
         <div class="row">
             <div class="col">
-                
+
             </div>
         </div>
     </div>
@@ -27,5 +27,5 @@
                 </div>
             </div>
         </div>
-    </div>>
+    </div>
 {% endblock %}
