--- a/templates/base.html
+++ b/templates/base.html
@@ -97,10 +97,25 @@
                 </ul>
             </div>
         </div>
+        <div class="row bg-white">
+            <nav class="navbar navbar-expand-lg navbar-light w-100">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                {% include 'includes/mobile-top-header.html' %}
+                {% include 'includes/main-nav.html' %}
+            </nav>
+        </div>
+        <div id="delivery-banner" class="row text-center">
+            <div class="col bg-black text-white">
+                <h4 class="logo-font my-1">Free delivery on orders over £{{ free_shipping_threshold }}!</h4>
+            </div>
+        </div>
     </header>
     
     {% if messages %}
-        <div class="message-container"></div>
+    <div class="message-container">
+    </div>
     {% endif %}
 
     {% block page_header %}
