added first couple of products

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -9,7 +9,7 @@
                 <a href="" class="dropdown-item">Jelly & Foam Sweets</a>
                 <a href="" class="dropdown-item">Chocolate & Toffee Sweets</a>
                 <a href="" class="dropdown-item">Traditional Sweets</a>
-                <a href="" class="dropdown-item">All Sweets</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Sweets</a>
             </div>
         </li>
 
