--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,7 +20,7 @@
                 </h1>
                 <div class='my-5'>
                     <h4>
-                        <a href='' class="shop-now-button btn btn-lg rounder-0 text-uppercase py-3">
+                        <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounder-0 text-uppercase py-3">
                             SHOP NOW!
                         </a>
                     </h4>
