--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -18,10 +18,10 @@
                 Confectionary
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="confectionary-link">
-                <a href="" class="dropdown-item">Chocolate</a>
-                <a href="" class="dropdown-item">Retro</a>
-                <a href="" class="dropdown-item">Fudge</a>
-                <a href="" class="dropdown-item">All Confectionary</a>
+                <a href="{% url 'products' %}?category=chocolate" class="dropdown-item">Chocolate</a>
+                <a href="{% url 'products' %}?category=retro" class="dropdown-item">Retro</a>
+                <a href="{% url 'products' %}?category=fudge" class="dropdown-item">Fudge</a>
+                <a href="{% url 'products' %}?category=chocolate,retro,fudge" class="dropdown-item">All Confectionary</a>
             </div>
         </li>
 
@@ -30,9 +30,9 @@
                 Snacks and More
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="snacks-link">
-                <a href="" class="dropdown-item">Snacks</a>
-                <a href="" class="dropdown-item">Gift Boxes & Baskets</a>
-                <a href="" class="dropdown-item">Sweet Hampers</a>
+                <a href="{% url 'products' %}?category=snacks" class="dropdown-item">Snacks</a>
+                <a href="{% url 'products' %}?category=gift_boxes,gift_baskets" class="dropdown-item">Gift Boxes & Baskets</a>
+                <a href="{% url 'products' %}?category=sweet_hampers" class="dropdown-item">Sweet Hampers</a>
             </div>
         </li>
 
@@ -41,10 +41,10 @@
                 Special Offers
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="specials-link">
-                <a href="" class="dropdown-item">New Arrivals</a>
-                <a href="" class="dropdown-item">Deals</a>
-                <a href="" class="dropdown-item">Clearance</a>
-                <a href="" class="dropdown-item">All Specials</a>
+                <a href="{% url 'products' %}?category=new_arrivals" class="dropdown-item">New Arrivals</a>
+                <a href="{% url 'products' %}?category=deals" class="dropdown-item">Deals</a>
+                <a href="{% url 'products' %}?category=clearance" class="dropdown-item">Clearance</a>
+                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="dropdown-item">All Specials</a>
             </div>
         </li>
     </ul>
