added sorting function

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -9,6 +9,7 @@ body {
     color: #555;
     font-family: 'Lato';
 }
+
 /* from Bulma */
 .icon {
     align-items: center;
@@ -72,6 +73,18 @@ body {
 a.category-badge > span.badge:hover {
     background: #212529 !important;
     color: #fff !important;
+}
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
 }
 
 /* -------------------------------- Media Queries */
