--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -25,7 +25,9 @@
         <div class="row">
             <div class="col">
                 {% if basket_items %}
-                    <div class="table-responsive rounded"></div>
+                    <div class="table-responsive rounded">
+                        {{ basket_items }}
+                    </div>
                 {% else %}
                     <p class="lead mb=5">Your basket is empty</p>
                     <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
