updated views.py with search/sort options. Fixed broken navbar

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-{% load basket_tools %}
 
 {% block page_header %}
     <div class='container header-container'>
@@ -86,7 +85,7 @@
                                             data-product_size="{{ item.size }}"><small>Remove</small></button>
                                     </td>
                                     <td class="py-3">
-                                        <p class="my-0">£{{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                        <p class="my-0">£</p>
                                     </td>
                                 </tr>
                             {% endfor %}
