--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -1,10 +1,10 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-products-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-confectionary-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Sweets 'N' Treats
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="all-products-link">
+            <div class="dropdown-menu bg-info border-0" aria-labelledby="all-confectionary-link">
                 <a href="{% url 'products' %}?sort=price&direction=asc" class="dropdown-item">By Price</a>
                 <a href="{% url 'products' %}?sort=name&direction=asc" class="dropdown-item ">Name</a>
                 <a href="{% url 'products' %}?sort=category&direction=asc" class="dropdown-item ">Category</a>
@@ -13,10 +13,10 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="pic-n-mix-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Pick 'N' Mix
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
+            <div class="dropdown-menu bg-info border-0" aria-labelledby="pic-n-mix-link">
                 <a href="{% url 'products' %}?category=fizzy_sweets" class="dropdown-item">Fizzy Sweets</a>
                 <a href="{% url 'products' %}?category=jelly_and_foam" class="dropdown-item">Jelly and Foam Sweets</a>
                 <a href="{% url 'products' %}?category=chocolate_toffee" class="dropdown-item">Chocolate and Toffee Sweets</a>
@@ -27,10 +27,10 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="homeware-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="gift-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Confectionary
             </a>
-            <div class="dropdown-menu border-0" aria-labelledby="homeware-link">
+            <div class="dropdown-menu bg-info border-0" aria-labelledby="gift-link">
                 <a href="" class="dropdown-item">Celebrations & Special Occasions</a>
                 <a href="" class="dropdown-item">Hampers and Baskets</a>
                 <a href="" class="dropdown-item">Other Offers</a>
