--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -112,30 +112,30 @@
             </div>
         </div>
     </div>
-    <div class="btt-button shadow-sm rounded-0 border border-black">
-        <a class="btt-link d-flex h-100">
-            <i class="fas fa=arrow-up text-black mx-auto my-auto"></i>
+    <div class="bg-warning btt-button text-black shadow-sm rounded-0 border border-black">
+        <a class="btt-link d-flex h-100 text-black">
+            <i class="fas fa-arrow-up text-black mx-auto my-auto"></i></i>
         </a>
     </div>
 {% endblock %}
 
 {% block postloadjs %}
-    {{ block.super}}
+    {{ block.super }}
     <script type="text/javascript">
-        $('.btt-link').click(function(e) {
-            window.scrollTo(0,0)
-        })
-    </script>
-
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	</script>
+    
     <script type="text/javascript">
         $('#sort-selector').change(function() {
-            let selector = $(this);
-            let currentUrl = new URL(window.location);
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
 
-            let selectedVal = selector.val();
+            var selectedVal = selector.val();
             if(selectedVal != "reset"){
-                let sort = selectedVal.split("_")[0];
-                let direction = selectedVal.split("_")[1];
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
 
                 currentUrl.searchParams.set("sort", sort);
                 currentUrl.searchParams.set("direction", direction);
