--- a/templates/base.html
+++ b/templates/base.html
@@ -104,12 +104,12 @@
             </div>
         </nav>
         <div class="row bg-info">
+            {% include 'includes/mobile-nav.html' %}
             <nav class="navbar navbar-expand-lg navbar-light w-100">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                {% include 'includes/mobile-nav.html' %}
-                {% include 'includes/main-nav.html' %}
+                {% include 'includes/menu-nav.html' %}
             </nav>
         </div>
         <div id="delivery-banner" class="row text-center">
