--- a/templates/includes/menu-nav.html
+++ b/templates/includes/menu-nav.html
@@ -1,5 +1,5 @@
 <div class="collapse navbar-collapse" id="main-nav">
-    <ul class="navbar-nav w-auto mx-auto">
+    <ul class="navbar-nav w-auto text-center mx-auto">
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="all-confectionary-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 All Sweets 'N' Treats
